--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
+
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="DMR User Database">
+  <meta name="description" content="A new Flutter project.">
+
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -33,6 +35,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>DMR User Database</title>
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="favicon.png"/>
+
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
